# LuxAI-S1

./: .gitignore  LICENSE  README.md  pyproject.toml
luxai/luxenv/game/: actions.py  cell.py  city.py  constants.py  game.py  game_map.py  match_controller.py
luxai/luxenv/luxenv/: action_spaces.py  agent.py  lux_env.py  observation.py  player.py  reward.py
luxai/luxenv/luxenv/utils/: util.py  utility_constants.py
luxai/luxrl/: config.py
luxai/luxrl/algorithms/: mappo.py
luxai/luxrl/arch/: action_head.py  actor_critic.py  baseline.py  core.py  policy.py  scalar_encoder.py  spatial_encoder.py
luxai/luxrl/arch/libs/: glu.py  hyper_parameters.py  param_initalize.py  popart.py  resblock.py  utils.py  value_norm.py
luxai/luxrl/ma/: coordinator.py  league.py  luxagent.py  payoff.py  pfsp.py  player.py
luxai/luxrl/runner/: base_runner_fixed.py  base_runner_pfsp.py  luxai_runner_fixed.py  luxai_runner_pfsp.py
luxai/luxrl/storage/: data_buffer.py
luxai/luxrl/trainer/: train.py  train_pfsp.py
luxai/luxrl/utils/: shapes.py  utils.py
